--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "amoled-cord",
-  "version": "4.1.0",
-  "description": "A customizable, pitch black theme for Discord. Lights out, baby!",
+  "name": "skylight-discord-theme",
+  "version": "1.0.0",
+  "description": "AMOLED-Cord with a peek of sunlight.",
   "repository": "github:MiniDiscordThemes/AMOLEDCord",
   "author": "Saltssaumure <themes@saltssaumure.net>",
   "contributors": [
